# doodle-doc

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
configs/: default.yaml
scripts/: generate_test_pdfs.py
src/doodle_doc/: __init__.py  cli.py
src/doodle_doc/api/: __init__.py  deps.py  main.py  schemas.py
src/doodle_doc/api/routes/: __init__.py  documents.py  health.py  ingest.py  search.py
src/doodle_doc/core/: __init__.py  config.py  database.py  models.py
src/doodle_doc/eval/: __init__.py  human_eval.py  metrics.py  pseudo_queries.py  runner.py  synth_eval.py
src/doodle_doc/ingestion/: __init__.py  colqwen_embed.py  colqwen_index.py  discover.py  embed.py  index.py  pipeline.py  preprocess.py  regions.py  render.py
src/doodle_doc/search/: __init__.py  colqwen_search.py  fusion.py  rerank.py  retrieval.py  text_search.py
src/doodle_doc/synth/: __init__.py  gemini_generator.py  pipeline.py  synth_index.py
tests/: conftest.py
tests/test_api/: test_health.py
tests/test_eval/: test_metrics.py  test_pseudo_queries.py  test_runner.py
tests/test_ingestion/: test_preprocess.py  test_regions.py
tests/test_search/: test_fusion.py  test_index.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: index.css  main.tsx  routeTree.gen.ts
ui/src/api/: client.ts  hooks.ts  types.ts
ui/src/components/layout/: NavBar.tsx  PageLayout.tsx
ui/src/components/search/: ResultCard.tsx  ResultsGrid.tsx  ResultsSummary.tsx  SketchCanvas.tsx  ToolBar.tsx
ui/src/routes/: __root.tsx  library.tsx  search.tsx  viewer.$docId.$pageNum.tsx
(+6 files in other folders)
